<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#292027"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="serif-monospace"
        android:padding="20sp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="45sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/seeMore"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:padding="10sp"
        android:text="@string/btn_text"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/creator"
        android:padding="10sp"
        android:textSize="18sp"
        android:textColor="#fff"
        tools:ignore="VisualLintBounds" />

</LinearLayout>