<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#251D37"
    tools:context=".TechActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/second_screen"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20sp"
        android:padding="20sp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            android:layout_marginBottom="10sp"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:id="@+id/java"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="#4D3B75"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/java"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/nodejs"
                android:layout_width="150dp"
                android:layout_height="135dp"
                app:cardBackgroundColor="#004361"
                app:cardCornerRadius="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/nodejs"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />

            </androidx.cardview.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:id="@+id/js"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="#9A8D01"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/js"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/react"
                android:layout_width="150dp"
                android:layout_height="135dp"
                app:cardBackgroundColor="#02AFC3"
                app:cardCornerRadius="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/react"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

            </androidx.cardview.widget.CardView>



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:gravity="center"
            tools:ignore="UselessParent">
            <androidx.cardview.widget.CardView
                android:id="@+id/extension"
                android:layout_width="150dp"
                android:layout_height="135dp"
                android:layout_marginEnd="30dp"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="#753BF4"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/ext"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/portfolio"
                android:layout_width="150dp"
                android:layout_height="135dp"
                app:cardBackgroundColor="#009E07"
                app:cardCornerRadius="10sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/portfolio"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />

            </androidx.cardview.widget.CardView>



        </LinearLayout>


    </LinearLayout>

</LinearLayout>
